# quickpvr

./: .clang-format  .gitignore  GeneratePreviewForURL.m  GenerateThumbnailForURL.m  Info.plist  main.c
en.lproj/: InfoPlist.strings
libpvr/: CMakeLists.txt  Makefile  pvr.cc  pvr.h  pvrtc.cc
pvrsamples/: brighterday.pvr
qtpvr/: CMakeLists.txt  README  qtpvr.kdev4
qtpvr/src/: main.cpp  qtpvr.cpp  qtpvr.h  qtpvr.ui
quickpvr.xcodeproj/: project.pbxproj
src/: Makefile  pvr.cc  pvr.h
